fix: Add SERVER_PORT to all services and update Caddyfile for Cloudflare
CRITICAL FIXES:
- Added SERVER_PORT environment variable to all Spring Boot services (8081-8087)
- Fixes 'Could not resolve placeholder PINS_SERVICE_PORT' error
- Updated Caddyfile to serve HTTP directly (Cloudflare handles HTTPS)
- Removed automatic HTTPS redirect that was causing 522 errors
- Services will now start successfully with correct ports

--- a/infra/caddy/Caddyfile
+++ b/infra/caddy/Caddyfile
@@ -92,17 +92,65 @@ brooksweb.uk, www.brooksweb.uk {
   }
 }
 
-# Health check endpoint on port 80 (for load balancers)
-:80 {
+# HTTP endpoint - serve application directly (SSL via Cloudflare)
+http://brooksweb.uk, http://www.brooksweb.uk, :80 {
   log {
     output stdout
     format console
     level INFO
   }
 
+  # Enable gzip compression
+  encode gzip zstd
+
+  # Health check
   @health path /health
   respond @health "OK" 200
 
-  # Redirect all other traffic to HTTPS
-  redir https://brooksweb.uk{uri} permanent
+  # API routes -> Microservices
+  handle_path /api/auth/* {
+    reverse_proxy auth-service:8081
+  }
+
+  handle_path /api/social/* {
+    reverse_proxy social-service:8082
+  }
+
+  handle_path /api/lists/* {
+    reverse_proxy lists-service:8083
+  }
+
+  handle_path /api/pins/* {
+    reverse_proxy pins-service:8084
+  }
+
+  handle_path /api/media/* {
+    reverse_proxy media-service:8085
+  }
+
+  handle_path /api/moderation/* {
+    reverse_proxy moderation-service:8086
+  }
+
+  handle_path /api/notifications/* {
+    reverse_proxy notifications-service:8087
+  }
+
+  # Management/Actuator endpoints
+  handle /actuator/* {
+    reverse_proxy pins-service:8084
+  }
+
+  # All other routes -> Frontend
+  handle {
+    reverse_proxy frontend:3000
+  }
+
+  # Security headers
+  header {
+    -Server
+    X-Content-Type-Options nosniff
+    X-Frame-Options SAMEORIGIN
+    Referrer-Policy "strict-origin-when-cross-origin"
+  }
 }
