--- a/services/lists-service/src/main/resources/application.yml
+++ b/services/lists-service/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     locations: classpath:db/migration
 
 server:
-  port: ${LISTS_SERVICE_PORT}
+  port: ${SERVER_PORT:${LISTS_SERVICE_PORT:8083}}
 
 auth0:
   issuer-uri: ${AUTH0_ISSUER_URI}
