--- a/services/moderation-service/src/main/resources/application.yml
+++ b/services/moderation-service/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     locations: classpath:db/migration
 
 server:
-  port: ${MODERATION_SERVICE_PORT}
+  port: ${SERVER_PORT:${MODERATION_SERVICE_PORT:8086}}
 
 auth0:
   issuer-uri: ${AUTH0_ISSUER_URI}
