--- a/services/social-service/src/main/resources/application.yml
+++ b/services/social-service/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     locations: classpath:db/migration
 
 server:
-  port: ${SOCIAL_SERVICE_PORT}
+  port: ${SERVER_PORT:${SOCIAL_SERVICE_PORT:8082}}
 
 auth0:
   issuer-uri: ${AUTH0_ISSUER_URI}
