--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -16,9 +16,14 @@ services:
       args:
         SERVICE_DIR: services/auth-service
     environment:
+      SERVER_PORT: "8081"
       AUTH_DB_URL: ${AUTH_DB_URL?AUTH_DB_URL must be set in .env file}
       AUTH_DB_USER: ${AUTH_DB_USER?AUTH_DB_USER must be set in .env file}
       AUTH_DB_PASSWORD: ${AUTH_DB_PASSWORD?AUTH_DB_PASSWORD must be set in .env file}
+      SPRING_DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE: ${DB_MAX_POOL_SIZE:-2}
+      SPRING_DATASOURCE_HIKARI_MINIMUM_IDLE: ${DB_MIN_IDLE:-0}
+      SPRING_DATASOURCE_HIKARI_CONNECTION_TIMEOUT: ${DB_CONNECTION_TIMEOUT_MS:-30000}
+      SPRING_FLYWAY_CONNECT_RETRIES: ${FLYWAY_CONNECT_RETRIES:-10}
       AUTH0_ISSUER_URI: ${AUTH0_ISSUER_URI?AUTH0_ISSUER_URI must be set in .env file}
       AUTH0_AUDIENCE: ${AUTH0_AUDIENCE?AUTH0_AUDIENCE must be set in .env file}
       BROOKS_JWT_ISSUER: ${BROOKS_JWT_ISSUER?BROOKS_JWT_ISSUER must be set in .env file}
@@ -41,9 +46,14 @@ services:
       args:
         SERVICE_DIR: services/social-service
     environment:
+      SERVER_PORT: "8082"
       SOCIAL_DB_URL: ${SOCIAL_DB_URL?SOCIAL_DB_URL must be set in .env file}
       SOCIAL_DB_USER: ${SOCIAL_DB_USER?SOCIAL_DB_USER must be set in .env file}
       SOCIAL_DB_PASSWORD: ${SOCIAL_DB_PASSWORD?SOCIAL_DB_PASSWORD must be set in .env file}
+      SPRING_DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE: ${DB_MAX_POOL_SIZE:-2}
+      SPRING_DATASOURCE_HIKARI_MINIMUM_IDLE: ${DB_MIN_IDLE:-0}
+      SPRING_DATASOURCE_HIKARI_CONNECTION_TIMEOUT: ${DB_CONNECTION_TIMEOUT_MS:-30000}
+      SPRING_FLYWAY_CONNECT_RETRIES: ${FLYWAY_CONNECT_RETRIES:-10}
       AUTH0_ISSUER_URI: ${AUTH0_ISSUER_URI?AUTH0_ISSUER_URI must be set in .env file}
       AUTH0_AUDIENCE: ${AUTH0_AUDIENCE?AUTH0_AUDIENCE must be set in .env file}
       BROOKS_WEB_ORIGINS: ${BROOKS_WEB_ORIGINS?BROOKS_WEB_ORIGINS must be set in .env file}
@@ -62,9 +72,14 @@ services:
       args:
         SERVICE_DIR: services/lists-service
     environment:
+      SERVER_PORT: "8083"
       LISTS_DB_URL: ${LISTS_DB_URL?LISTS_DB_URL must be set in .env file}
       LISTS_DB_USER: ${LISTS_DB_USER?LISTS_DB_USER must be set in .env file}
       LISTS_DB_PASSWORD: ${LISTS_DB_PASSWORD?LISTS_DB_PASSWORD must be set in .env file}
+      SPRING_DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE: ${DB_MAX_POOL_SIZE:-2}
+      SPRING_DATASOURCE_HIKARI_MINIMUM_IDLE: ${DB_MIN_IDLE:-0}
+      SPRING_DATASOURCE_HIKARI_CONNECTION_TIMEOUT: ${DB_CONNECTION_TIMEOUT_MS:-30000}
+      SPRING_FLYWAY_CONNECT_RETRIES: ${FLYWAY_CONNECT_RETRIES:-10}
       AUTH0_ISSUER_URI: ${AUTH0_ISSUER_URI?AUTH0_ISSUER_URI must be set in .env file}
       AUTH0_AUDIENCE: ${AUTH0_AUDIENCE?AUTH0_AUDIENCE must be set in .env file}
       BROOKS_WEB_ORIGINS: ${BROOKS_WEB_ORIGINS?BROOKS_WEB_ORIGINS must be set in .env file}
@@ -83,9 +98,14 @@ services:
       args:
         SERVICE_DIR: services/pins-service
     environment:
+      SERVER_PORT: "8084"
       PINS_DB_URL: ${PINS_DB_URL?PINS_DB_URL must be set in .env file}
       PINS_DB_USER: ${PINS_DB_USER?PINS_DB_USER must be set in .env file}
       PINS_DB_PASSWORD: ${PINS_DB_PASSWORD?PINS_DB_PASSWORD must be set in .env file}
+      SPRING_DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE: ${DB_MAX_POOL_SIZE:-2}
+      SPRING_DATASOURCE_HIKARI_MINIMUM_IDLE: ${DB_MIN_IDLE:-0}
+      SPRING_DATASOURCE_HIKARI_CONNECTION_TIMEOUT: ${DB_CONNECTION_TIMEOUT_MS:-30000}
+      SPRING_FLYWAY_CONNECT_RETRIES: ${FLYWAY_CONNECT_RETRIES:-10}
       SOCIAL_SERVICE_URL: ${SOCIAL_SERVICE_URL?SOCIAL_SERVICE_URL must be set in .env file}
       LISTS_SERVICE_URL: ${LISTS_SERVICE_URL?LISTS_SERVICE_URL must be set in .env file}
       AUTH0_ISSUER_URI: ${AUTH0_ISSUER_URI?AUTH0_ISSUER_URI must be set in .env file}
@@ -130,9 +150,14 @@ services:
       args:
         SERVICE_DIR: services/moderation-service
     environment:
+      SERVER_PORT: "8086"
       MODERATION_DB_URL: ${MODERATION_DB_URL?MODERATION_DB_URL must be set in .env file}
       MODERATION_DB_USER: ${MODERATION_DB_USER?MODERATION_DB_USER must be set in .env file}
       MODERATION_DB_PASSWORD: ${MODERATION_DB_PASSWORD?MODERATION_DB_PASSWORD must be set in .env file}
+      SPRING_DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE: ${DB_MAX_POOL_SIZE:-2}
+      SPRING_DATASOURCE_HIKARI_MINIMUM_IDLE: ${DB_MIN_IDLE:-0}
+      SPRING_DATASOURCE_HIKARI_CONNECTION_TIMEOUT: ${DB_CONNECTION_TIMEOUT_MS:-30000}
+      SPRING_FLYWAY_CONNECT_RETRIES: ${FLYWAY_CONNECT_RETRIES:-10}
       AUTH0_ISSUER_URI: ${AUTH0_ISSUER_URI?AUTH0_ISSUER_URI must be set in .env file}
       AUTH0_AUDIENCE: ${AUTH0_AUDIENCE?AUTH0_AUDIENCE must be set in .env file}
       BROOKS_WEB_ORIGINS: ${BROOKS_WEB_ORIGINS?BROOKS_WEB_ORIGINS must be set in .env file}
